--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "name": "Souris Tran",
             "email": "trantrungnghiac11@gmail.com",
             "role": "Developer",
-			"copyright": "Alexusmai",
+			"copyright": "Alexusmai"
         }
     ],
     "homepage": "https://github.com/SourisT2N/file-manager.git",
